# Copyright 2019 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "grid-cli"
version = "0.2.4"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Hyperledger Grid is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "grid"
path = "src/main.rs"

[dependencies]
assert_cmd = "1.0"
clap = "2"
diesel = { version = "1.0", features = ["postgres"], optional = true }
cylinder = { version = "0.2.2", features = ["key-load"] }
libc = "0.2"
log = "0.4"
flexi_logger = "0.17"
sawtooth-sdk = "0.4"
sabre-sdk = "0.5"
grid-sdk = { path = "../sdk", features = ["postgres", "sqlite", "pike", "schema", "product", "product-gdsn", "location"] }
rust-crypto = "0.2"
protobuf = "2.19"
users = "0.11"
reqwest = "0.9"
dirs = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
diesel_migrations = "1.4"
whoami = "1"

[features]
default = [
    "sawtooth",
    "database",
    "location",
    "pike",
    "postgres",
    "product",
    "schema",
    "sqlite",
]

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "purchase-order",
    "splinter",
]

database = ["diesel"]
postgres = [
    "diesel/postgres",
]
sqlite = [
    "diesel/sqlite",
]

admin-keygen = []
location = ["pike", "schema"]
pike = []
product = ["pike", "schema"]
purchase-order = []
sawtooth = []
schema = ["pike"]
splinter = ["admin-keygen"]

[package.metadata.deb]
maintainer = "The Hyperledger Grid Team"
depends = "$auto, bash-completion"
assets = [
    ["target/release/grid", "/usr/bin/grid", "755"],
    ["packaging/ubuntu/completions/grid", "/usr/share/bash-completion/completions/grid", "644"]
]
