# Copyright 2019 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "grid-cli"
version = "0.4.1"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Hyperledger Grid is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "grid"
path = "src/main.rs"

[dependencies]
assert_cmd = "1.0"
chrono = { version = "0.4", optional = true }
clap = "2"
cylinder = { version = "0.2.2", features = ["key-load"] }
diesel = { version = "1.0", features = ["postgres"], optional = true }
diesel_migrations = "1.4"
dirs = "3"
flexi_logger = "0.17"
grid-sdk = { path = "../sdk", features = ["client", "client-reqwest", "data-validation"] }
libc = "0.2"
log = "0.4"
protobuf = "2.19"
rand = { version = "0.7", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
rust-crypto = "0.2"
sabre-sdk = "0.5"
sawtooth-sdk = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = "0.8"
sha2 = { version = "0.10", optional = true }
users = "0.11"
whoami = "1"
zip = { version = "0.5", optional = true }

[dev-dependencies]
mockito = "0.30"
pretty_assertions = "1"
tempdir = "0.3"

[features]
default = [
    "database",
    "location",
    "pike",
    "postgres",
    "product",
    "purchase-order",
    "schema",
    "sqlite",
    "xsd-downloader"
]

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "xsd-downloader-cache-dir",
    "xsd-downloader-force-download",
]

database = ["diesel"]
postgres = [
    "diesel/postgres",
    "grid-sdk/postgres",
]
sqlite = [
    "diesel/sqlite",
    "grid-sdk/sqlite",
]

location = ["pike", "schema", "grid-sdk/location"]
pike = ["grid-sdk/pike"]
product = ["pike", "schema", "grid-sdk/product", "grid-sdk/product-gdsn"]
purchase-order = ["chrono", "grid-sdk/purchase-order", "rand", "serde_json"]
schema = ["pike", "grid-sdk/schema"]
xsd-downloader = ["zip", "reqwest", "sha2", "grid-sdk/data-validation"]
xsd-downloader-cache-dir = ["xsd-downloader"]
xsd-downloader-force-download = ["xsd-downloader"]

[package.metadata.deb]
maintainer = "The Hyperledger Grid Team"
depends = "$auto, bash-completion"
assets = [
    ["target/release/grid", "/usr/bin/grid", "755"],
    ["packaging/man/*", "/usr/share/man/man1", "644"],
    ["packaging/ubuntu/completions/grid", "/usr/share/bash-completion/completions/grid", "644"]
]
