# Copyright 2019 Bitwise, IO Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "grid-daemon"
version = "0.1.0"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"

[[bin]]
name = "gridd"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
reqwest = { version = "0.10.1", optional = true, features = ["json"] }
clap = "2"
ctrlc = "3.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "1.4"
grid-sdk = { path = "../sdk" }
log = "0.4"
protobuf = "2"
sawtooth-sdk = "0.3"
flexi_logger = "0.14"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.6", features = ["v4"] }
url = "2.1"
base64 = "0.10"
byteorder = "1"

[dependencies.splinter]
git = "https://github.com/cargill/splinter"
optional = true
features = [ "events" ]

[features]
default = ["sawtooth-support"]

stable = ["sawtooth-support"]

experimental = ["splinter-support"]

sawtooth-support = []
splinter-support = ["splinter", "reqwest"]
test-api = []

[package.metadata.deb]
maintainer = "The Hyperledger Grid Team"
depends = "$auto"
assets = [
    ["target/release/gridd", "/usr/bin/gridd", "755"]
]
maintainer-scripts = "packaging/ubuntu"
