# Copyright 2019 Bitwise, IO Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "grid-daemon"
version = "0.2.1"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Hyperledger Grid is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "gridd"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "3.0"
base64 = "0.10"
byteorder = "1"
clap = "2"
ctrlc = "3.0"
diesel = { version = "1.0.0", features = ["r2d2", "serde_json"] }
diesel_migrations = "1.4"
flexi_logger = "0.14"
futures = "0.3"
grid-sdk = { path = "../sdk", features = ["database", "experimental"] }
log = "0.4"
protobuf = "2.19"
reqwest = { version = "0.10.1", optional = true, features = ["json", "blocking"] }
sabre-sdk = { version = "0.5", optional = true }
sawtooth-sdk = { version = "0.4", features = ["transact-compat"] }
scabbard = { version = "0.4", optional = true, features = ["client", "events"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transact = { version = "0.2", optional = true }
url = "2.1"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.splinter]
version = "0.4"
optional = true
features = [ "events" ]

[features]
default = ["sawtooth-support"]

stable = [
    "sawtooth-support",
    "pike",
    "schema",
    "product",
    "location"
]

experimental = [
    "stable",
    "splinter-support",
    "track-and-trace"
]

sawtooth-support = []
splinter-support = ["scabbard", "splinter", "reqwest", "sabre-sdk", "transact", "transact/contract-archive"]
test-postgres = []
pike = []
schema = ["pike"]
product = ["pike", "schema"]
location = ["pike", "schema"]
track-and-trace = []


[package.metadata.deb]
maintainer = "The Hyperledger Grid Team"
depends = "$auto"
assets = [
    ["target/release/gridd", "/usr/bin/gridd", "755"]
]
maintainer-scripts = "packaging/ubuntu"
