# Copyright 2019 Bitwise, IO Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "grid-daemon"
version = "0.4.1"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Hyperledger Grid is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "gridd"
path = "src/main.rs"

[dependencies]
actix-rt = { version = "2", default-features = false }
actix-web = { version = "4", optional = true, default-features = false }
actix-http = { version = "3", optional = true, default-features = false }
base64 = "0.13"
byteorder = "1"
cfg-if = "1"
clap = "2"
ctrlc = "3.0"
cylinder = { version = "0.2.2", features = ["jwt"], optional = true }
diesel = { version = "1.0.0", features = ["r2d2", "serde_json"] }
diesel_migrations = "1.4"
flexi_logger = "0.22"
futures = "0.3"

grid-sdk = { path = "../sdk"}
log = "0.4"
protobuf = "2.19"
sawtooth-sdk = { version = "0.4", features = ["transact-compat"], optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "blocking"] }
sabre-sdk = { version = "0.8", optional = true }
scabbard = { version = "0.6", optional = true, features = ["client", "events", "reqwest"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
transact = { version = "0.4", optional = true }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.splinter]
version = "0.6"
optional = true
features = [ "events", "admin-service" ]

[features]
default = [
    "database",
    "database-postgres",
    "database-sqlite",
    "event",
    "location",
    "pike",
    "product",
    "purchase-order",
    "rest-api",
    "sawtooth-support",
    "schema",
    "splinter-support",
]

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "integration",
    "track-and-trace",
    "dlt-monitor",
]

event = ["database"]
database = []
database-postgres = ["grid-sdk/postgres"]
database-sqlite = ["grid-sdk/sqlite"]
dlt-monitor = ["grid-sdk/dlt-monitor"]
location = ["grid-sdk/location", "grid-sdk/rest-api-endpoint-location", "pike", "schema"]
pike = [
    "grid-sdk/pike",
    "grid-sdk/rest-api-endpoint-agent",
    "grid-sdk/rest-api-endpoint-organization",
    "grid-sdk/rest-api-endpoint-role",
    "serde_json",
]
product = ["grid-sdk/product", "grid-sdk/rest-api-endpoint-product", "pike", "schema"]
purchase-order = ["grid-sdk/rest-api-endpoint-purchase-order", "grid-sdk/purchase-order", "pike"]
rest-api = ["actix-web", "actix-http", "database", "grid-sdk/rest-api-endpoint-batches", "grid-sdk/rest-api-actix-web-4"]
sawtooth-support = [
    "database",
    "event",
    "grid-sdk/backend-sawtooth",
    "sawtooth-sdk",
    "sabre-sdk",
    "rest-api"
]
schema = ["grid-sdk/rest-api-endpoint-schema", "grid-sdk/schema", "pike"]
splinter-support = [
  "cylinder/key-load",
  "database",
  "event",
  "grid-sdk/backend-splinter",
  "reqwest",
  "rest-api",
  "sabre-sdk",
  "scabbard",
  "serde_json",
  "serde",
  "splinter",
  "transact/contract-archive",
]
test-postgres = []
track-and-trace = ["grid-sdk/rest-api-endpoint-record", "grid-sdk/track-and-trace"]
integration = ["grid-sdk/batch-processor", "grid-sdk/rest-api-endpoint-submit"]


[package.metadata.deb]
maintainer = "The Hyperledger Grid Team"
depends = "$auto"
assets = [
    ["/build/daemon/packaging/xsd/product/*.xsd", "/var/lib/grid/xsd/product/", "644"],
    ["target/release/gridd", "/usr/bin/gridd", "755"]
]
maintainer-scripts = "packaging/ubuntu"
