# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "griddle"
version = "0.4.1"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"
license = "Apache-2.0"
description = "Grid integration component"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false }
clap = "2.33.3"
cylinder = { version = "0.2.2", features = ["key-load", "jwt"], optional = true}
diesel = { version = "1.0", features = ["r2d2"], optional = true }
flexi_logger = "0.22"
futures-0-3 = { package = "futures", version = "0.3", optional = true }
log = "0.4"
users = "0.11"

[dependencies.grid-sdk]
path = "../sdk"
features = [
  "rest-api-actix-web-4",
  "rest-api-actix-web-4-run",
  "batch-processor",
  "lifecycle"
]

[features]
default = []

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "config",
    "config-builder",
    "config-clap",
    "config-default",
    "config-env",
    "database-postgres",
    "database-sqlite",
    "proxy",
    "rest-api",
]

config = []
config-builder = ["config"]
config-clap = ["config-builder"]
config-default = ["config-builder"]
config-env = ["config-builder"]
database-postgres = ["diesel", "grid-sdk/postgres"]
database-sqlite = ["diesel", "grid-sdk/sqlite"]
proxy = [
  "grid-sdk/proxy-run",
  "grid-sdk/proxy-client-reqwest",
  "grid-sdk/rest-api-endpoint-proxy",
]
rest-api = [
  "cylinder",
  "futures-0-3",
  "grid-sdk/lifecycle",
]
