# Copyright 2018 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter"
version = "0.3.7"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
actix = { version = "0.8", default-features = false }
actix-http = {version = "0.2", features = ["flate2-zlib"] }
actix-service = "0.4"
actix-web = { version = "1.0", default-features = false, features = ["flate2-zlib"] }
actix-web-actors = "1.0"
atomicwrites = "0.2"
awc = { version = "0.2", optional = true }
bcrypt = {version = "0.6", optional = true}
byteorder = "1"
crossbeam-channel = "0.3"
diesel = { version = "1.0", features = ["postgres", "r2d2", "serde_json"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
flate2 = "1.0.10"
futures = "0.1"
hyper = { version = "0.12", optional = true }
log = "0.3.0"
mio = "0.6"
mio-extras = "2"
openssl = "0.10"
protobuf = "2"
sawtooth = { version = "0.1", default-features = false, features = ["lmdb-store", "receipt-store"] }
sawtooth-sabre = "0.4"
sawtooth-sdk = { version = "0.3", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.1.22", optional = true }
transact = { version = "0.1", features = ["sawtooth-compat"] }
url = "1.7.1"
ursa = { version = "0.1", optional = true }
uuid = { version = "0.7", features = ["v4"]}
zmq = { version = "0.9", optional = true }

[dev-dependencies]
tempdir = "0.3"

[build-dependencies]
protoc-rust = "2"
glob = "0.2"

[features]
default = []

experimental = [
    "zmq-transport",
    "biome",
    "biome-notifications",
    "database"
]

zmq-transport = ["zmq"]
ursa-compat = ["ursa"]
sawtooth-signing-compat = ["sawtooth-sdk"]
events = ["hyper", "tokio", "awc"]
biome = ["database"]
biome-credentials = ["biome", "database", "bcrypt"]
biome-notifications = ["biome", "database"]
database = ["diesel", "diesel_migrations"]

[package.metadata.docs.rs]
features = [
    "zmq-transport",
    "ursa-compat",
    "sawtooth-signing-compat",
    "events",
    "biome",
    "biome-credentials",
    "biome-notifications",
    "database"
  ]
